tests/integration/snapshots/integration__conformance__n_structure_open_array_open_object.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[{
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found no significant characters
 --> stdin:1:2
  |
1 | [{
  |  ^
  |  |
  |  expected due to `{`
  |
help: insert the missing closed delimiter `}`
  |
1 | [{}
  |   +
