tests/integration/snapshots/integration__conformance__n_structure_open_array_string.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["a"
stderr ---
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:4
  |
1 | ["a"
  | -  ^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | ["a"]
  |     +
